@@ -1,3 +1,8 @@
+2000-04-17  Per Bothner  <per@bothner.com>
+
+	* strings.scm: Use invoke/invoke-static more.
+	Generalize many procedures to work on <abstract-string>.
+
 2000-04-13  Per Bothner  <per@bothner.com>
 
 	* reflection.scm (record-type-name):  Use Scheme's demangleName.
